--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.6.4",
+        "init": "^0.1.2",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.4.14",
+        "npx": "^10.2.2",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.16",
         "vite": "^5.0.0"
     },
     "dependencies": {
